tests/baselines/reference/parserModifierOnStatementInBlock2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock2.ts(2,4): error TS1184: Modifiers cannot appear here.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock2.ts (1 errors) ====
    {
       declare var x = this;
       ~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    }
    